plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.2'
}

repositories {
    mavenCentral()
}

apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'org.jetbrains.intellij'

sourceCompatibility = 17

dependencies {
    //testCompile group: 'junit', name: 'junit', version: '4.12'
}

intellij {
//    version 'LATEST-EAP-SNAPSHOT'
    version.set('IC-2022.3.2')
    updateSinceUntilBuild.set(false)
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            srcDir 'src/main/gen'
        }
    }
}

String pluginVersion = '0.1.7'
String pluginIndex = 'ros-integrate'
String changes = new File("changelog.html").text

patchPluginXml {
    version pluginVersion
    sinceBuild.set("202.6397")
    pluginDescription.set("Extends IntelliJ-Based IDEs with ROS specific development tools")
    changeNotes.set(changes)
}

group pluginIndex
version pluginVersion
targetCompatibility = JavaVersion.VERSION_17
